--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,1 +1,138 @@
+;==========================================================
+;
+;
+;   ██████╗  ██████╗ ██╗  ██╗   ██╗██████╗  █████╗ ██████╗
+;   ██╔══██╗██╔═══██╗██║  ╚██╗ ██╔╝██╔══██╗██╔══██╗██╔══██╗
+;   ██████╔╝██║   ██║██║   ╚████╔╝ ██████╔╝███████║██████╔╝
+;   ██╔═══╝ ██║   ██║██║    ╚██╔╝  ██╔══██╗██╔══██║██╔══██╗
+;   ██║     ╚██████╔╝███████╗██║   ██████╔╝██║  ██║██║  ██║
+;   ╚═╝      ╚═════╝ ╚══════╝╚═╝   ╚═════╝ ╚═╝  ╚═╝╚═╝  ╚═╝
+;
+;
+;   To learn more about how to configure Polybar
+;   go to https://github.com/polybar/polybar
+;
+;   The README contains a lot of information
+;
+;==========================================================
+[colors]
+background = #cc222222
+foreground = #b6a49b
+
+
+[bar/bar]
+width = 100%
+height = 28pt
+
+bottom =false
+offset-y = 6
+radius = 0
+fixed-center = true
+border = 0
+
+background = ${colors.background}
+foreground = ${colors.foreground}
+
+line-size = 4
+border-size = 0
+border-color = #00000000
+padding = 2
+module-margin = 2
+
+separator = |
+separator-foreground = ${colors.disabled}
+modules-left = bspwm
+modules-center = xwindow
+modules-right = pulseaudio memory cpu date battery
+cursor-click = pointer
+cursor-scroll = pointer
+enable-ipc = true
+tray-position = right
+wm-restack = bspwm
+
+font-0 = Noto Mono Nerd Font Complete Mono:pixelsize=16;3
+font-1 = Noto Sans:style=Regular:pixelsize=12;2
+font-2 = Font Awesome 6 Free:style=Solid:pixelsize=12;3
+font-3 = Font Awesome 6 Brands:style=Regular:pixelsize=12;3
+font-4 = Source Han Sans CN:style=Regular:pixelsize=14;3
+
+
+[module/bspwm]
+type = internal/bspwm
+pin-workspaces = true
+inline-mode = false
+enable-click = true
+enable-scroll = true
+reverse-scroll = true
+fuzzy-match = false
+occupied-scroll = true
+ws-icon-0 = 壹;
+ws-icon-1 = 贰;
+ws-icon-2 = 叁;
+ws-icon-3 = 肆;
+ws-icon-4 = 伍;
+format = <label-state> <label-mode>
+label-monitor = %name%
+label-focused = %name%
+label-focused-underline = #c93c3c
+label-occupied = %name%
+label-occupied-underline = #404040
+label-urgent = %name%
+label-empty = %name%
+label-separator = |
+label-separator-padding = 2
+
+
+[module/xwindow]
+type = internal/xwindow
+label = %title:0:60:...%
+
+[module/pulseaudio]
+type = internal/pulseaudio
+
+format-volume-prefix = "VOL "
+format-volume-prefix-foreground = ${colors.primary}
+format-volume = <label-volume>
+label-volume = %percentage%%
+
+label-muted = muted
+label-muted-foreground = ${colors.disabled}
+
+[module/memory]
+type = internal/memory
+interval = 1
+format = <label>
+label = RAM %percentage_used%%
+format-underline = #ffb6c1
+
+[module/cpu]
+type = internal/cpu
+interval = 1
+format = <label>
+label = CPU %percentage%%
+format-underline = #ba55d3
+
+[module/date]
+type = internal/date
+interval = 1
+time = %H:%M:%S
+time-alt = %Y-%m-%d %A
+format = <label>
+format-underline = #c77eb5
+label = %time%
+
+[module/battery]
+type = custom/script
+interval = 1
+exec = /home/zcmj/.config/polybar/baty.sh
+; format-prefix = "BAT"
+; format-prefix-foreground = ${colors.primary}
+label = ${exec}
+format = BAT <label>
+format-background = ${colors.magenta}
+format-underline = #ffe4e1
+
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
 
