--- a/sm8250-common_sonako.config
+++ b/sm8250-common_sonako.config
@@ -27,6 +27,11 @@ CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_SERIO=y
 CONFIG_SERIO_LIBPS2=y
 
+# Android LMK
+CONFIG_ANDROID_SIMPLE_LMK=y
+CONFIG_ANDROID_SIMPLE_LMK_MINFREE=128
+CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
+
 # IO Schedulers
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_CFQ=y
@@ -52,7 +57,7 @@ CONFIG_PSTORE=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
-CONFIG_CMDLINE="ramoops_memreserve=4M"
+CONFIG_CMDLINE="cgroup_disable=pressure ramoops_memreserve=4M"
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_SQ=y
 CONFIG_MTD=y
@@ -137,7 +142,6 @@ CONFIG_WIREGUARD=y
 
 # zRAM
 CONFIG_ZRAM_WRITEBACK=y
-CONFIG_ZRAM_DEDUP=y
 
 CONFIG_SELECT_MEMORY_MODEL=y
 CONFIG_SPARSEMEM_MANUAL=y
@@ -160,13 +164,6 @@ CONFIG_UCLAMP_TASK=y
 CONFIG_UCLAMP_ASSIST=y
 CONFIG_UCLAMP_TASK_GROUP=y
 CONFIG_UCLAMP_BUCKETS_COUNT=20
-
-# CGROUP
-CONFIG_CGROUPS=y
-CONFIG_CGROUP_SCHED=y
-CONFIG_MEMCG_SWAP_ENABLED=y
-CONFIG_CGROUP_WRITEBACK=y
-CONFIG_CGROUP_NET_PRIO=y
 
 # SBalance
 CONFIG_IRQ_SBALANCE=y
@@ -255,6 +252,7 @@ CONFIG_CPU_FREQ_TIMES=n
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+
 CONFIG_CPU_INPUT_BOOST=y
 CONFIG_MAX_BOOST_FREQ_LP=1804800
 CONFIG_MAX_BOOST_FREQ_PERF=2246400
@@ -262,3 +260,7 @@ CONFIG_MAX_BOOST_FREQ_PRIME=2553600
 CONFIG_CPU_FREQ_MIN_LP=1171200
 CONFIG_CPU_FREQ_MIN_PERF=825600
 CONFIG_CPU_FREQ_MIN_PRIME=844800
+
+# MGLRU
+CONFIG_LRU_GEN=y
+CONFIG_LRU_GEN_ENABLED=y
