--- a/sm8250-common_sonako.config
+++ b/sm8250-common_sonako.config
@@ -2,7 +2,7 @@
 CONFIG_BUILD_ARM64_DT_OVERLAY=y
 
 # Local Version
-CONFIG_LOCALVERSION="-ヨサキ🌸"
+CONFIG_LOCALVERSION="-与崎_ソナコ"
 CONFIG_LOCALVERSION_AUTO=y
 
 # Power management options
@@ -68,6 +68,7 @@ CONFIG_MTD_BLOCK2MTD=y
 # Backlight
 CONFIG_BACKLIGHT_KTZ8866=y
 CONFIG_BACKLIGHT_DUALKTZ8866=y
+CONFIG_THERMAL_DIMMING=y
 
 # Camera motor
 CONFIG_MOTOR_DRV8846=y
@@ -214,7 +215,7 @@ CONFIG_TASK_DELAY_ACCT=y
 CONFIG_CPUSET_ASSIST=y
 CONFIG_CPUSET_AUDIO_APP="0-3"
 CONFIG_CPUSET_BG="0-2"
-CONFIG_CPUSET_CAMERA="0-7"
+CONFIG_CPUSET_CAMERA="0-3"
 CONFIG_CPUSET_DISPLAY="0-6"
 CONFIG_CPUSET_FG="0-2,4-5"
 CONFIG_CPUSET_RESTRICTED="0-3"
@@ -224,7 +225,33 @@ CONFIG_CPUSET_TOP_APP="0-7"
 # DEVFREQ
 CONFIG_DEVFREQ_BOOST=y
 CONFIG_DEVFREQ_INPUT_BOOST_DURATION_MS=58
+CONFIG_DEVFREQ_WAKE_BOOST_DURATION_MS=1000
 CONFIG_DEVFREQ_CPU_LLCC_DDR_BW_BOOST_FREQ=3879
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
+CONFIG_KPROFILES=y
+CONFIG_AUTO_KPROFILES=y
+CONFIG_AUTO_KPROFILES_MI_DRM=y
+CONFIG_POLLY_CLANG=y
+CONFIG_CPU_IDLE_GOV_TEO=y
+CONFIG_USB_F_QCRNDIS=y
+CONFIG_USB_CONFIGFS_QCRNDIS=y
+CONFIG_UNICODE=y
+CONFIG_POWER_AVS=y
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_DYNAMIC_STUNE_BOOST=y
+CONFIG_CPU_INPUT_BOOST=y
+CONFIG_INPUT_BOOST_DURATION_MS=58
+CONFIG_WAKE_BOOST_DURATION_MS=100
+CONFIG_INPUT_BOOST_FREQ_LP=0
+CONFIG_INPUT_BOOST_FREQ_PERF=0
+CONFIG_INPUT_BOOST_FREQ_PRIME=0
+CONFIG_MAX_BOOST_FREQ_LP=1708800
+CONFIG_MAX_BOOST_FREQ_PERF=1766400
+CONFIG_MAX_BOOST_FREQ_PRIME=1862400
+CONFIG_OPLUS_MM_HACKS=y
+CONFIG_DEFAULT_HOSTNAME="(rohail)"
 
 # TEO
 CONFIG_CPU_IDLE_GOV_TEO=y
@@ -253,14 +280,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 
-CONFIG_CPU_INPUT_BOOST=y
-CONFIG_MAX_BOOST_FREQ_LP=1804800
-CONFIG_MAX_BOOST_FREQ_PERF=2246400
-CONFIG_MAX_BOOST_FREQ_PRIME=2553600
-CONFIG_CPU_FREQ_MIN_LP=1171200
-CONFIG_CPU_FREQ_MIN_PERF=825600
-CONFIG_CPU_FREQ_MIN_PRIME=844800
-
-# MGLRU
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
+# CPUMASK
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=112
+CONFIG_PRIME_CPU_MASK=128
